typo errors fixed

--- a/Frauenloop_python_intro_sep7.ipynb
+++ b/Frauenloop_python_intro_sep7.ipynb
@@ -288,8 +288,8 @@
     "## Dictionary\n",
     "key value pair :\n",
     "Dictionaries have a wide use in python . \n",
-    "        Attention : Dictionary are immutable meaning (they can't be modified once created ) . \n",
-    "                 Dictionary are ordered (the index matters) \n",
+    "        Attention : Dictionary are mutable meaning .However keys int dictionary can only be immutable. That means keys can not be Lists or sets.\n",
+    "                 Dictionary are unordered .\n",
     "      "
    ]
   },
@@ -652,8 +652,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "In class excersice : \n",
-    "    1. Read in the weights and heights and names from the data1.csv  ( for the sake of learning don't use pandas. Don't hate me :D)\n",
+    "## In class excersice : \n",
+    "    1. Read in the weights and heights and names from the data2.csv  ( for the sake of learning don't use pandas. Don't hate me :D)\n",
     "    2. calculate the bmi and for each person and tell who has normal weight : bmi < 25 \n",
     "    3. calculate mean height and weight .\n",
     "    4. calculate the median weight and height.\n",
@@ -717,7 +717,7 @@
     "def read_file(path) : \n",
     "    import csv\n",
     "    raw_list =[]\n",
-    "    with open('data2.csv', 'rt') as f:\n",
+    "    with open(path, 'r') as f:\n",
     "        reader = csv.DictReader(f, delimiter=',')\n",
     "        for row in reader:\n",
     "            #print (row)\n",
@@ -754,6 +754,46 @@
    "source": [
     "result_list = read_file('data2.csv')\n",
     "result_list"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "import csv \n",
+    "path = \"data2.csv\"\n",
+    "raw_list =[]\n",
+    "with open(path, 'r') as f:\n",
+    "    reader = csv.DictReader(f, delimiter=',')\n",
+    "    for row in reader:\n",
+    "            #print (row)\n",
+    "        raw_list.append(dict(row))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<csv.DictReader at 0x112300b70>"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "reader"
    ]
   },
   {
