--- a/Frauenloop_python_intro_sep7.ipynb
+++ b/Frauenloop_python_intro_sep7.ipynb
@@ -1121,7 +1121,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 289,
+   "execution_count": 30,
    "metadata": {
     "collapsed": true
    },
@@ -1144,13 +1144,13 @@
     "#         fout.write(data)\n",
     "#         fout.write(\"\\n\")\n",
     "#         fout.write(str_add)\n",
-    "    return filepath_to_write\n",
+    "        return filepath_to_write\n",
     "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 290,
+   "execution_count": 65,
    "metadata": {
     "collapsed": false
    },
@@ -1158,16 +1158,32 @@
     {
      "data": {
       "text/plain": [
-       "'data3.csv'"
+       "'data7.csv'"
       ]
      },
-     "execution_count": 290,
+     "execution_count": 65,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "write_file('data2.csv', 'data3.csv',['nasim', '1.64', '75.1'] )"
+    "write_file('data2.csv', 'data7.csv',['nasim', '1.64', '75.1'] )"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 74,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "with open(\"inputfile\", \"r\") as f:\n",
+    "    lines = f.readlines()\n",
+    "with open(\"outputfile\", \"w\") as f:\n",
+    "    for line in lines:\n",
+    "        if line != \" Sara,1.57,65.77\\n\": # row to be deleted\n",
+    "            f.write(line)"
    ]
   },
   {
